
syntax = "proto3";

import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service CompanyJobSkill {
    rpc ReadCompanyJobSkill(CompanyJobSkillRequest) returns (CompanyJobSkillPayload);
	rpc CreateCompanyJobSkill(CompanyJobSkillPayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyJobSkill(CompanyJobSkillPayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyJobSkill(CompanyJobSkillPayload) returns (google.protobuf.Empty);
}

message CompanyJobSkillRequest{
		string Id=1;
	}

	message CompanyJobSkillPayload {
	 string Id = 1;
     string Job = 2;
     string Skill = 3;
     string SkillLevel = 4;
     int32 Importance  = 5;
	
	}